--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -643,6 +643,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_countries"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginTop="5dp"
@@ -712,7 +713,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:orientation="horizontal"
-                    android:weightSum="4"
+                    android:weightSum="3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/worldpiechart">
@@ -742,6 +743,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
