--- a/app/src/main/res/layout/single_contry_item.xml
+++ b/app/src/main/res/layout/single_contry_item.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout
+
     android:layout_width="80dp"
     android:layout_height="120dp"
     android:background="@drawable/contry_item"
@@ -51,3 +54,4 @@
 
 
 </LinearLayout>
+</layout>
