--- a/app/src/main/res/layout/single_contry_item.xml
+++ b/app/src/main/res/layout/single_contry_item.xml
@@ -3,16 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout
 
-    android:layout_width="80dp"
-    android:layout_height="120dp"
+    android:layout_width="140dp"
+    android:layout_height="180dp"
     android:background="@drawable/contry_item"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
@@ -31,7 +31,7 @@
             android:layout_marginLeft="5dp"
             android:text="Italy"
             android:textColor="#01183E"
-            android:textSize="10sp"
+            android:textSize="15sp"
             android:textStyle="bold">
 
         </TextView>
@@ -42,12 +42,13 @@
         android:id="@+id/total_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
         android:text=""
+        android:drawablePadding="5dp"
         android:textColor="#01183E"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:textStyle="bold">
 
     </TextView>
