--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -686,7 +686,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:layout_marginEnd="25dp"
-                        android:text="View More"
+                        android:text="View All"
                         android:textColor="@color/white"
                         android:textSize="15sp"
                         android:textStyle="bold"
