--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -85,7 +85,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Cases Of Covid-19 "
+                android:text="Total Cases Of Covid-19 in India "
                 android:textColor="@android:color/white"
                 android:textSize="10sp"
                 android:textStyle="bold"
