--- a/app/src/main/res/layout/item_creative_header_profile.xml
+++ b/app/src/main/res/layout/item_creative_header_profile.xml
@@ -19,13 +19,13 @@
         app:layout_constraintVertical_bias="1.0"
         tools:layout_height="92dp"
         tools:layout_width="92dp"
-        android:background="@drawable/district_profile_image">
+        android:background="@drawable/city_letter_bg">
 
         <TextView
             android:visibility="visible"
-            android:textColor="@color/pink"
+            android:textColor="@color/white"
             android:textStyle="bold"
-            android:textSize="25sp"
+            android:textSize="@dimen/dimens_16dp"
             android:gravity="center"
             android:text="A"
             android:id="@+id/tv_img"
