--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,7 +7,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/background">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,7 +42,7 @@
             android:textSize="25sp"
             android:textAllCaps="true"
             android:textStyle="bold"
-            android:textColor="#01183E"
+            android:textColor="@color/white"
             android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/btn_back_state"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,8 +57,8 @@
         android:layout_height="0dp"
         app:contentHorizontalPadding="32dp"
         app:contentItemMargin="10dp"
-        app:headerItemMargin="10dp"
-        app:headerItemSize="92dp"
+        app:headerItemMargin="5dp"
+        app:headerItemSize="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
