Resoureces Detail Activity created Designed Done And some ui changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#001341</color>
-    <color name="colorPrimaryDark">#001341</color>
+    <color name="colorPrimary">#01183E</color>
+    <color name="colorPrimaryDark">#01183E</color>
     <color name="colorAccent">#CA555D</color>
 
 
