--- a/app/src/main/res/layout/activity_resources_detail.xml
+++ b/app/src/main/res/layout/activity_resources_detail.xml
@@ -39,7 +39,7 @@
             app:srcCompat="@drawable/analysis_header" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
+            android:id="@+id/btnFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
@@ -50,6 +50,7 @@
             app:srcCompat="@drawable/ic_filter_list_black_24dp" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvResourcesList"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="10dp"
